src/components/Acc/AccDetails/UPhoto.module.scss
.acc-details {
  display: flex;
  justify-content: flex-end;
  position: relative;
  width: max-content;
  padding: 3rem;
  &__photo {
    width: 10rem;
    @media screen and (max-width: 900px) {
      width: 8rem;
    }
  }
  &__edit-btn {
    position: absolute;
    top: 11rem;
    left: -1rem;
    background-color: var(--color-board-default);
    color: var(--color-white-dark);
    border: none;
    padding: 0.5rem 1rem;
    border-radius: 5px;
    cursor: pointer;
    transition: all 0.2s;
    @media screen and (max-width: 1200px) {
      top: 9rem;
      left: -2rem;
    }
    @media screen and (max-width: 900px) {
      width: 8rem;
    }
    &--choise {
      position: absolute;
      background-color: var(--color-board-group-default);
      padding: 1rem;
      top: 13.5rem;
      left: -2rem;
      display: flex;
      flex-direction: column;
      gap: 1rem;
      border: 2px solid var(--color-board-default);

      &::before {
        content: "";
        width: 2.5rem;

        height: 1.5rem;
        display: block;
        background-color: var(--color-board-group-default);
        position: absolute;
        top: -1.5rem;
        left: 1rem;
        clip-path: polygon(50% 0, 50% 0, 100% 100%, 0 100%);
        z-index: 11;
      }
      &::after {
        content: "";
        width: 3.1rem;
        height: 2rem;
        display: block;
        background-color: var(--color-board-default);
        position: absolute;
        top: -2rem;
        left: 0.7rem;
        clip-path: polygon(50% 0, 50% 0, 100% 100%, 0 100%);
        z-index: 0;
      }
      & span {
        padding: 0.5rem 1rem;
        border-radius: 0.5rem;
        background-color: var(--color-board-default);
        color: var(--color-white-dark);
      }
    }
  }
  &__checkbox {
    display: none;
  }
  &__set-avatar {
    position: fixed;
    top: 35%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 11;
    &--wrapper {
      position: fixed;
      z-index: 1000;
      top: 0;
      left: 0;
      width: 100vw;
      height: 100vh;
      background-color: rgba($color: #000000, $alpha: 0.5);
    }
    &__btns {
      padding-top: 1.5rem;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }
  }
  &__edit-btn--choise {
    display: none;
  }
  &__checkbox:checked ~ &__edit-btn--choise {
    // transform: scale(0);
    // display: none;
    display: flex;
  }
  &__set-btn {
    background-color: var(--color-white-dark);
    border: none;
    padding: 0.5rem 1rem;
    border-radius: 5px;
    transition: transform 0.2s;
    cursor: pointer;
    &:hover {
      transform: translateY(-0.2rem);
    }
  }
  &__close-btn {
    font-size: 3rem;
    font-weight: 600;
    color: var(--color-white-dark);
    cursor: pointer;
    opacity: 0.6;
    &:hover {
      opacity: 1;
    }
  }
}

[sign-out-theme="light"] {
  background-color: var(--default-theme-light);
  color: var(--color-dark-light);
}
[sign-out-theme="dark"] {
  background-color: var(--color-board-default);
  color: var(--color-white-dark);
}

